
ModuleManaver v2.2
  - XML import code now lives here.
  - XML export code now lives here.
  - Now output an error message to logs when the is_connection_ok test fails
  - Default connection timeout is now 3 seconds
  - It is now impossible to upgrade or uninstall a module that is missing dependencies
  - Removes all support for events, now uses hooks

FileManager v1.6.4
  - modified to use CMS_ROOT_URL
  - Add a different icon for navigating up one level.
  - No longer allow uploading any php (or derivative) file.
  - No longer allow renaming any file to have a .php extension (or a derivative).
  - Now use CMSMS error console when displaying filepicker exceptions (no uncaught exceptions)
  - Removes all support for events, now uses hooks

FilePicker v1.0.1
  - No longer allow overriding the filepicker type on the URL.
  - No longer allow uploading any .php files.
  - No longer set the size attribute on the input field, use CSS
  - Removes all support for events, now uses hooks

AdminLog
  - New core module to replace the adminlog.php file

Search  - v1.52
  - FEATURE: Now exports a command for cmscli
  - The search results now contain _content_ and the page id for content pages.
  - Removes all support for events, now uses hooks
  - Adds the use_like parameter
  - Removes the useor parameter.
  - Adds the ajax_getwords action for jquery-ui-autocomplete usage
  - more...

AdminSearch v1.1
 - Rationalize the code a bit (remove un-necessary files).
 - Adds the ability to search text files within the /assets directory (excluding modules)
 - Rename of slave classes to use namespaces.

DesignManager v1.1.6
 - Now properly handle renaming exported stylesheets and templates.
 - Now only reads {Navigator} tags, will not read {cms_module module=Navigator} tags (for a bit).
 - PHP 7 fixes
 - Minor template fixes in design list.
 - FEATURE: Now display a warning in edit template and css when locking is disabled
 - Removes all support for events, now uses hooks
